--- a/app/src/main/res/layout/activity_display_search.xml
+++ b/app/src/main/res/layout/activity_display_search.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jskel.android.searchit.displaySearch"
-    android:id="@+id/searchList">
-</ListView>
+    android:layout_width="match_parent"
+    android:id="@+id/searchResult">
+
+
+
+</android.support.v7.widget.RecyclerView>
