--- a/app/src/main/res/layout/activity_display_search.xml
+++ b/app/src/main/res/layout/activity_display_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:id="@+id/searchResult"
+    android:id="@+id/searchResultRecyclerView"
     android:scrollbars="vertical">
 
 
