--- a/app/src/main/res/layout/display_search_layout.xml
+++ b/app/src/main/res/layout/display_search_layout.xml
@@ -1,7 +1,19 @@
-  <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="#C21807"
-        android:id="@+id/resultTitle"
-        android:textSize="20dp"/>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="75dp"
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="20dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/resultTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="#C21807"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
