I have decided I will start with Google Drive and then move to some of the more popular online storage mediums (DropBox, OneDrive, Box)

--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -19,13 +19,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:inputType="text"
-        android:hint="What would you like to know?"
+        android:hint="What would you like to search?"
         android:id="@+id/searchField"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Press Me!"
-        android:onClick="openWebPage"/>
+        android:onClick="displayResults"/>
 
 </LinearLayout>
